# SolarMiner

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.org  dagger.json  docker-compose.yaml  go.mod  main.go  nats.conf
.cargo/: config.toml
.github/workflows/: backend.yml
Pi/controller/: .env.example  Cargo.toml
Pi/controller/src/: main.rs
Pi/controller/src/state/: mod.rs  test.rs
TUI/: Cargo.toml
TUI/src/: main.rs
pi/: .env.example  Cargo.toml  README.org  config.example.json  config.example.yaml  docker-compose.yaml  nats.conf
pi/data/plug/: status8_bitaxe_on.json
pi/data/solaredge/: battery_discharging.json  battery_discharging_99.json  battery_preserving_charge.json  con-full-battery.json  power_discharging.json  powerflow_charging.json  powerflow_producing.json
pi/src/: config.rs  main.rs
pi/src/communication/: initialization.rs  mod.rs
pi/src/communication/events/: mod.rs  tests.rs
pi/src/communication/events/plug/: mod.rs  tests.rs
pi/src/communication/events/solaredge/: mod.rs  tests.rs
pi/src/controller/: mod.rs  switch.rs
pi/src/state/: mod.rs  part.rs  reporting.rs  test.rs  update.rs
pi/src/state/action/: mod.rs
pi/src/state/events/: mod.rs  tests.rs
pi/src/state/update/: mod.rs
pi/src/state/update/events/: mod.rs
pipelines/: builder_rust.go  deploy.go  go.mod  images.go  main.go  ssh.go
responses/currentPowerFlow/: charging.json  discharging.json  idle.json
server/: .env.example  Cargo.toml  README.org  Untitled.ipynb  docker-compose.yaml
server/responses/currentPowerFlow/: charging.json  discharging.json  idle.json
server/src/: config.rs  lib.rs  main.rs
server/src/communication/: initialization.rs  mod.rs
server/src/events/: mod.rs
server/src/sitedata/solaredge/: types.rs
server/src/state/: mod.rs
src/: main.rs
src/sitedata/: mod.rs
src/sitedata/solaredge/: mod.rs  types.rs
tui/: Cargo.toml
tui/src/: main.rs
