[package]
name = "solarminer-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
itertools = "0.14.0"
serde_plain = "1.0.2"
async-nats = { version = "0.42.0", features = ["server_2_11"] }
futures = "0.3.31"
bytes = { version = "1.10.1", features = ["serde"] }
serde_repr = "0.1.20"
serde_yaml = "0.9.34"
once_cell = "1.21.3"
duration-str = "0.17.0"
solarminer-service = { path = "../server" }
#reqwest = { version = "0.12.15", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
