[package]
name = "solarminer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytes = "1.10.1"
async-nats = "0.38.0"
#nats-common = { git = "https://github.com/cloudsftp/nats-common.git", branch = "latest" }
nats-common = { path = "../../nats-common" }
futures-util = "0.3.31"
