[package]
name = "solarminer-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.38.0"
bytes = "1.10.1"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
env_logger = "0.11.8"
nats-common = { git = "https://github.com/cloudsftp/nats-common.git", branch = "latest" }
