[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rumqttc = "0.24.0"
